small fixes, trying asterisk to get top alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,10 @@ h2 {
     font-weight: bold;
 }
 
+sup {
+    vertical-align: top;
+  }
+
 
 /*New games and fav games styles*/
     
